Big changes: pattern MVC for most of the classes + new icons instead of letters for the toolbar